# Game-of-Life-GB

./: .clangd  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: CleanAll.cmake
lib/: hUGEDriver.lib
print_assets/: box_back.xcf
print_assets/manual/: Sans titre.xcf  manual_01.xcf  manual_02.xcf
src/: cells_map.c  cells_map.h  main.c  selector.c  selector.h  selector_sprite.c  tiles.c
src/graphics/: manual_map.c  manual_map.h  selector_sprite.c  selector_sprite.h  settings_map.c  settings_map.h  start_message_map.c  start_message_map.h  tiles.c  tiles.h  title_screen_map.c  title_screen_map.h
src/musics/: led.c  led.h  musics.h  plateau.c  plateau.h  spot.c  spot.h  title.c  title.h
src/scenes/: grid_scene.c  grid_scene.h  intro_scene.c  intro_scene.h  manual_scene.c  manual_scene.h  scenes.c  scenes.h  settings_scene.c  settings_scene.h  title_scene.c  title_scene.h
